# sfm-navigation

./: .gitignore  PROJECT_MAP.md  README.md  all-algorithms.md  behavior_pipeline.md  important_notes.ipynb  pyproject.toml  requirements.txt
config/: default.json
data/ATC_data/: person_9315400.csv  person_9330400.csv  person_9330600.csv  person_9331400.csv  person_9331600.csv  person_9332600.csv  person_9333700.csv  person_9333701.csv  person_9334200.csv  person_9335400.csv  person_9335700.csv  person_9335900.csv  person_9342700.csv  person_9344100.csv  person_9344700.csv  person_9345300.csv  person_9345500.csv  person_9345600.csv  person_9345700.csv  person_9350000.csv  person_9350001.csv  person_9350200.csv  person_9350201.csv  person_9350400.csv  person_9350500.csv  person_9351200.csv  person_9351201.csv  person_9351300.csv  person_9351400.csv  person_9351500.csv  person_9351600.csv  person_9351601.csv  person_9351800.csv  person_9352000.csv  person_9352100.csv  person_9352101.csv  person_9352200.csv  person_9352400.csv  person_9352500.csv  person_9352501.csv  (+23 more)
data/calibrated_moods/: Aggressive_barger.csv  Alert_crowd_sprinter.csv  Alert_fast_walker_open_space.csv  Crowd_weaving_rusher.csv  Desperate_rusher.csv  Engaged_speed_walker.csv  Focused_rusher.csv  Group_barging_through.csv  Group_in_a_panic.csv  Quiet_pair.csv  Rushing_group_dense.csv  Ruthless_barger.csv  Social_Walker_v2.csv  Solo_sprinter.csv  Stressed_pusher.csv  Uninterrupted_speed_walker.csv  Watchful_runner.csv  Zoned_out_weaver.csv  moods.ipynb
docs/cli/: animate-history.md  compare-animation.md  (+12 more)
(+79 files in other folders)
